--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-app",
-  "homepage": "https://ebalin1411.github.io/react-todo-app/",
+  "homepage": "https://ebalin1411.github.io/react-todo-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
